// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests sobre GifGrid debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h3
    className="animate_animated animate__fadeInDown"
  >
    Metal Gear
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Tests sobre GifGrid debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate_animated animate__fadeInDown"
  >
    Metal Gear
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="hola"
      url="https://localhost/hola.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="adios"
      url="https://localhost/adios.jpg"
    />
  </div>
</Fragment>
`;
